--- a/FE/src/app/pages/mesa-control/validacion/validacion.component.html
+++ b/FE/src/app/pages/mesa-control/validacion/validacion.component.html
@@ -44,7 +44,8 @@
       padding-bottom: 0 !important;
     }
     
-    /* Estilos ultra compactos para TODOS los combos del filtro */
+
+ no n    /* Estilos ultra compactos para TODOS los combos del filtro */
     .filtro-container .mat-mdc-form-field-infix {
       padding-top: 1px !important;
       padding-bottom: 1px !important;
@@ -205,7 +206,7 @@
             <mat-option *ngIf="!loadingAgencias && agencias.length === 0" value="" disabled>
               No hay agencias disponibles (debugging)
             </mat-option>
-            <mat-option *ngFor="let agencia of agencias" [value]="agencia.IdAgency">
+            <mat-option *ngFor="let agencia of agencias" [value]="agencia.Id">
               {{ agencia.Name }}
             </mat-option>
           </mat-select>
