--- a/FE/src/app/pages/mesa-control/validacion/validacion.component.html
+++ b/FE/src/app/pages/mesa-control/validacion/validacion.component.html
@@ -405,18 +405,30 @@
                     <mat-icon>download</mat-icon>
                     <span>Descargar archivo</span>
                   </button>
-                  <button mat-menu-item (click)="onCancelar(item); $event.stopPropagation()">
+                  <button mat-menu-item *ngIf="item.fase !== 'Liberado'" (click)="onCancelar(item); $event.stopPropagation()">
                     <mat-icon>cancel</mat-icon>
                     <span>Cancelar pedido</span>
                   </button>
-                  <button mat-menu-item (click)="onExcepcion(item); $event.stopPropagation()">
+                  <button mat-menu-item *ngIf="item.fase !== 'Liberado'" (click)="onExcepcion(item); $event.stopPropagation()">
                     <mat-icon>warning</mat-icon>
                     <span>Excepción en el pedido</span>
                   </button>
-                  <button mat-menu-item (click)="onAdministrar(item); $event.stopPropagation()">
+                  <button mat-menu-item *ngIf="isManagerOrAdmin" [matMenuTriggerFor]="adminSubMenu">
                     <mat-icon>admin_panel_settings</mat-icon>
                     <span>Administrar</span>
+                    <mat-icon class="ml-auto">keyboard_arrow_right</mat-icon>
                   </button>
+                  
+                  <mat-menu #adminSubMenu="matMenu">
+                    <button mat-menu-item (click)="onEliminar(item); $event.stopPropagation()">
+                      <mat-icon>delete</mat-icon>
+                      <span>Eliminar</span>
+                    </button>
+                    <button mat-menu-item (click)="onCambiarEstatus(item); $event.stopPropagation()">
+                      <mat-icon>swap_horiz</mat-icon>
+                      <span>Cambiar estatus</span>
+                    </button>
+                  </mat-menu>
                 </mat-menu>
               </td>
             </ng-container>
